# gene-cluster-enrichment

./: .gitattributes  .gitignore  package.json  pyproject.toml  server.py  tsconfig.json
api/: stringdb.py
data/: 7227.protein.enrichment.terms.v12.0.txt  7227.protein.info.v12.0.txt  celltype-modifiers.csv  diopt.celltype-modifiers.csv  experimental-modifiers.tsv  modifier-data.json  modifiers.csv  top_enrichment.csv
src/: App.tsx  index.css  index.html  index.tsx
src/components/: ClusterEnrichment.tsx  ClusterGraph.tsx  ControlPanel.tsx  DynamicContainer.tsx  EnrichmentBarplot.tsx  EnrichmentBarplotRecharts.tsx  EnrichmentBarplotVisx.tsx  GeneTable.tsx
