[project]
name = "gene-cluster-react"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "markov-clustering>=0.0.6.dev0",
    "networkx>=3.5",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
